<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dialogx_date_picker_please_select_date">请选择日期</string>
    <string name="dialogx_date_picker_ok_button">确定</string>
    <string name="dialogx_date_picker_dialog_cancel">取消</string>
    <string name="dialogx_date_sunday">周日</string>
    <string name="dialogx_date_monday">周一</string>
    <string name="dialogx_date_tuesday">周二</string>
    <string name="dialogx_date_wednesday">周三</string>
    <string name="dialogx_date_thursday">周四</string>
    <string name="dialogx_date_friday">周五</string>
    <string name="dialogx_date_saturday">周六</string>
    <string name="error_dialogx_calendardialog_max_multi_select">请选择允许范围内的日期</string>
</resources>